<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/wishlist"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/Wishlist" />
        <item
            android:id="@+id/cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/cart" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/Account"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/Account" />
            <item
                android:id="@+id/Setting"
                android:icon="@drawable/settings"
                android:title="Settings"/>
            <item
                android:id="@+id/Logout"
                android:icon="@drawable/logout"
                android:title="Logout"/>
        </menu>
    </item>

</menu>
